--- a/Properties/Resources.zh.resx
+++ b/Properties/Resources.zh.resx
@@ -203,6 +203,9 @@
 # 要添加更多的域，请在下面输入条目（每行一个）。
 # 你也可以通过在开头添加"-"来排除域名。
 # And wildcards (* and ?) are also available.
+# You can specify not only domains but also addresses.
+#   * When an entry contains @, the entry is regarded as address.
+#   * When an entry does not contains @, the entry is regarded as domain.
 ##################################
 
 {1}</value>
@@ -255,6 +258,9 @@ example.org</value>
 # (2) 每行写一个条目，如下所示
 # (3) 以 "#" 开头的行被忽略
 # (4) Wildcards (* and ?) are available.
+# (5) You can specify not only domains but also addresses.
+#     * When an entry contains @, the entry is regarded as address.
+#     * when an entry does not contains @, the entry is regarded as domain.
 #
 ##################################
 
@@ -314,6 +320,12 @@ example.org</value>
   </data>
   <data name="MainUnsafeDomainsWarningHint" xml:space="preserve">
     <value>该域名被列入不安全域名列表中</value>
+  </data>
+  <data name="MainUnsafeAddressesWarning" xml:space="preserve">
+    <value>[警告] 包含不安全地址 ({0})</value>
+  </data>
+  <data name="MainUnsafeAddressesWarningHint" xml:space="preserve">
+    <value>该地址被列入不安全地址列表中</value>
   </data>
   <data name="MainUnsafeFilesWarning" xml:space="preserve">
     <value>[警告] 包含不安全的文件名 ({0}) </value>
