Backport address support (#53)
* Backport changes at #25

* Backport changes at #26

* Backport changes at #50

* Backport changes at #51

--- a/Properties/Resources.ja.resx
+++ b/Properties/Resources.ja.resx
@@ -187,6 +187,9 @@
 # さらにドメインを追加する場合は、以下に1行ずつ入力してください。
 # また、先頭に「-」をつけると、ドメインを除外することができます。
 # 指定にはワイルドカード（*および?）も使用可能です。
+# また、ドメインだけでなくアドレスを指定することもできます。
+# * @を含む場合はアドレスが指定されたとみなします
+# * @を含まない場合はドメインが指定されたとみなします
 ##################################
 
 {1}</value>
@@ -200,6 +203,9 @@
 # さらにドメインを追加する場合は、以下に1行ずつ入力してください。
 # また、先頭に「-」をつけると、ドメインを除外することができます。
 # 指定にはワイルドカード（*および?）も使用可能です。
+# また、ドメインだけでなくアドレスを指定することもできます。
+# * @を含む場合はアドレスが指定されたとみなします
+# * @を含まない場合はドメインが指定されたとみなします
 ##################################
 
 {1}</value>
@@ -236,6 +242,9 @@
 # (2) 以下の例のように一行に一件ずつ記載します。
 # (3) 冒頭が「#」から始まる行は無視されます。
 # (4) 指定にはワイルドカード（*および?）を使用可能です。
+# (5) ドメインだけでなくアドレス全体を指定することもできます。
+#     * @を含む場合はアドレスが指定されたとみなします。
+#     * @を含まない場合はドメインが指定されたとみなします。
 #
 ##################################
 
@@ -249,6 +258,9 @@ example.org</value>
 # (2) 以下の例のように一行に一件ずつ記載します。
 # (3) 冒頭が「#」から始まる行は無視されます。
 # (4) 指定にはワイルドカード（*および?）を使用可能です。
+# (5) ドメインだけでなくアドレス全体を指定することもできます。
+#     * @を含む場合はアドレスが指定されたとみなします。
+#     * @を含まない場合はドメインが指定されたとみなします。
 #
 ##################################
 
@@ -308,6 +320,12 @@ example.org</value>
   </data>
   <data name="MainUnsafeDomainsWarningHint" xml:space="preserve">
     <value>このドメインは誤送信の可能性が高いため、再確認を促す警告を出してします。</value>
+  </data>
+  <data name="MainUnsafeAddressesWarning" xml:space="preserve">
+    <value>[警告] 注意が必要なアドレス（{0}）が宛先に含まれています。</value>
+  </data>
+  <data name="MainUnsafeAddressesWarningHint" xml:space="preserve">
+    <value>このアドレスは誤送信の可能性が高いため、再確認を促す警告を出してします。</value>
   </data>
   <data name="MainUnsafeFilesWarning" xml:space="preserve">
     <value>[警告] 注意が必要なファイル名（{0}）が含まれています。</value>
